# check-int

./: .gitignore  LEDIC_Project_Plan.md  README.md  pyproject.toml
.hermes/plans/: 2026-04-24_093917-priority-implementation-plan.md
docs/: development-setup.md  offline-deployment-notes.md  windows-smoke-test.md
docs/plans/: 2026-04-23_112352-phase1-implementation-plan.md
packaging/: check_int.spec
src/check_int/: config.py  main.py
src/check_int/adapters/: __init__.py  ocr_engine.py  pdf_loader.py  structured_extractor.py  vision_detector.py
src/check_int/app/: __init__.py  controller.py  use_cases.py
src/check_int/domain/: __init__.py  enums.py  models.py  normalization.py
src/check_int/services/: __init__.py  comparator.py  datasheet_parser.py  eq_list_parser.py  excel_exporter.py  pid_parser.py  pipeline.py  record_mapper.py  result_formatter.py  runtime_checks.py
src/check_int/ui/: evidence_panel.py  file_panel.py  main_window.py  result_table.py
tests/: test_environment.py  test_smoke.py
tests/integration/: test_mvp_flow.py  test_real_pipeline_flow.py
tests/unit/: test_comparator.py  test_domain_models.py  test_eq_list_parser.py  test_evidence_panel.py  test_excel_exporter.py  test_excel_exporter_with_images.py  test_main_window_flow.py  test_ocr_engine_real.py  test_packaging_assets.py  test_pdf_loader_real.py  test_pipeline_interfaces.py  test_record_mapper.py  test_result_table_model.py  test_runtime_checks.py  test_structured_extractor.py  test_use_case_factories.py  test_yolo_detector.py
