[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check-int"
version = "0.1.0"
description = "Local Engineering Document Integrity Checker (LEDIC)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hermes Agent" }
]
dependencies = [
  "PySide6>=6.8",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "Pillow>=10.0",
  "PyMuPDF>=1.24"
]

[project.optional-dependencies]
ai = [
  "ultralytics>=8.3",
  "paddleocr>=2.8",
  "paddlepaddle>=3.0",
  "ollama>=0.4"
]
dev = [
  "pytest>=8.3",
  "pytest-qt>=4.4",
  "ruff>=0.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
